--- a/src/PlatynUI.Spy/PlatynUI.Spy.csproj
+++ b/src/PlatynUI.Spy/PlatynUI.Spy.csproj
@@ -1,12 +1,38 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RuntimeIdentifiers>win-x64;win-arm64;linux-x64;linux-arm</RuntimeIdentifiers>
+    <RuntimeIdentifiers>win-x64;win-arm64;linux-x64;linux-arm;osx-arm64</RuntimeIdentifiers>
     <Nullable>enable</Nullable>
-    <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+    <UseAppHost>true</UseAppHost>
+  </PropertyGroup>
+
+  <!-- macOS -->
+  <!-- <PropertyGroup
+    Condition=" '$(OS)' == 'Unix' And '$(DOTNET_RUNNING_IN_CONTAINER)' != 'true' And '$(IsLinux)' !=
+  'true' ">
+    <TargetFramework>net8.0-macos</TargetFramework>
+    <RuntimeIdentifiers>osx-arm64</RuntimeIdentifiers>
+    <ApplicationId>org.platynui.spy</ApplicationId>
+  </PropertyGroup> -->
+
+  <!-- Linux -->
+  <!-- <PropertyGroup Condition=" '$(OS)' == 'Unix' And '$(IsLinux)' == 'true' ">
+    <TargetFramework>net8.0-linux</TargetFramework>
+  </PropertyGroup> -->
+
+  <!-- Windows -->
+  <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
+    <TargetFramework>net8.0-windows</TargetFramework>
+    <OutputType>WinExe</OutputType>
+    <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
+  </PropertyGroup>
+
+  <!-- Hilfs-Property: Ist es Linux? -->
+  <PropertyGroup>
+    <IsLinux Condition="Exists('/proc/version')">true</IsLinux>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,7 +50,8 @@
     <!--Condition
     below is needed to remove Avalonia.Diagnostics package from build output in Release
     configuration.-->
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.5" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics"
+      Version="11.2.5" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.2.5" />
     <PackageReference Include="FluentAvaloniaUI" Version="2.3.0" />
     <PackageReference Include="System.CodeDom" Version="9.0.3" />
@@ -36,17 +63,29 @@
     <ProjectReference Include="..\PlatynUI.Runtime\PlatynUI.Runtime.csproj" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(RuntimeIdentifier)' == '' Or '$(RuntimeIdentifier)' == 'win-x64' Or '$(RuntimeIdentifier)' == 'win-arm64'">
-    <ProjectReference Include="..\PlatynUI.Platform.Win32\PlatynUI.Platform.Win32.csproj" />
-    <ProjectReference Include="..\PlatynUI.Extension.Win32.UiAutomation\PlatynUI.Extension.Win32.UiAutomation.csproj" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(RuntimeIdentifier)' == '' Or '$(RuntimeIdentifier)' == 'linux-x64' Or '$(RuntimeIdentifier)' == 'linux-musl-x64' Or '$(RuntimeIdentifier)' == 'linux-arm64' Or '$(RuntimeIdentifier)' == 'linux-musl-arm64'">
-    <ProjectReference Include="..\PlatynUI.Platform.X11\PlatynUI.Platform.X11.csproj" />
-    <ProjectReference Include="..\PlatynUI.Extension.Linux.AtSpi2\PlatynUI.Extension.Linux.AtSpi2.csproj" />
-  </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\PlatynUI.Extension.Provider.Client\PlatynUI.Extension.Provider.Client.csproj" />
+    <ProjectReference
+      Include="..\PlatynUI.Extension.Provider.Client\PlatynUI.Extension.Provider.Client.csproj" />
   </ItemGroup>
+
+  <ItemGroup
+    Condition="'$(RuntimeIdentifier)' == '' Or '$(RuntimeIdentifier)' == 'win-x64' Or '$(RuntimeIdentifier)' == 'win-arm64'">
+    <ProjectReference Include="..\PlatynUI.Platform.Win32\PlatynUI.Platform.Win32.csproj" />
+    <ProjectReference
+      Include="..\PlatynUI.Extension.Win32.UiAutomation\PlatynUI.Extension.Win32.UiAutomation.csproj" />
+  </ItemGroup>
+
+  <ItemGroup
+    Condition="'$(RuntimeIdentifier)' == '' Or '$(RuntimeIdentifier)' == 'linux-x64' Or '$(RuntimeIdentifier)' == 'linux-musl-x64' Or '$(RuntimeIdentifier)' == 'linux-arm64' Or '$(RuntimeIdentifier)' == 'linux-musl-arm64'">
+    <ProjectReference Include="..\PlatynUI.Platform.X11\PlatynUI.Platform.X11.csproj" />
+    <ProjectReference
+      Include="..\PlatynUI.Extension.Linux.AtSpi2\PlatynUI.Extension.Linux.AtSpi2.csproj" />
+  </ItemGroup>
+
+
+  <ItemGroup
+    Condition="'$(RuntimeIdentifier)' == '' Or '$(RuntimeIdentifier)' == 'osx-arm64' Or '$(RuntimeIdentifier)' == 'osx-x64'">
+    <ProjectReference Include="..\PlatynUI.Platform.MacOS\PlatynUI.Platform.MacOS.csproj" />
+  </ItemGroup>
+
 </Project>
