--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [linux-intel, linux-arm, windows-10, windows-11, macOS-intel, macOS-arm]
+        os: [linux-intel, linux-arm, windows-intel, macOS-arm]
         include:
           - os: linux-intel
             runs-on: ubuntu-latest
@@ -20,15 +20,10 @@ jobs:
           - os: linux-arm
             runs-on: ubuntu-24.04-arm64
             archs: aarch64
-          - os: windows
+          - os: windows-intel
             runs-on: windows-latest
             archs: x86_64
-          - os: macos-intel
-            # macos-13 was the last x86_64 runner
-            runs-on: macos-13
-            archs: x86_64
           - os: macos-arm
-            # macos-14+ (including latest) are ARM64 runners
             runs-on: macos-latest
             archs: arm64
 
