--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
         python-version: ["3.10", "3.11", "3.12", "3.13"]
-        robot-version: ["4.1", "5.0", "6.0", "6.1", "7.0", "7.1", "7.2"]
+        robot-version: ["6.0", "6.1", "7.0", "7.1", "7.2"]
 
     steps:
       - uses: actions/checkout@v4
@@ -33,6 +33,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Setup Swift
+        uses: swift-actions/setup-swift@v2
+        with:
+          swift-version: 6.1
 
       - name: Install Hatch
         run: pipx install hatch
