--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [windows-latest, ubuntu-latest, macos-latest]
         python-version: ["3.10", "3.11", "3.12", "3.13"]
         robot-version: ["6.0", "6.1", "7.0", "7.1", "7.2"]
 
@@ -35,9 +35,12 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Setup Swift
+        if: matrix.os == 'macos-latest'
         uses: swift-actions/setup-swift@v2
-        with:
-          swift-version: 6.1
+
+      - name: Get swift version
+        if: matrix.os == 'macos-latest'
+        run: swift --version
 
       - name: Install Hatch
         run: pipx install hatch
