chore: update github workflows

--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -53,10 +53,10 @@ jobs:
         uses: pypa/hatch@install
 
       - name: Run Python Tests
-        run: hatch test -py ${{ matrix.python-version }} -- -m "not wip"
+        run: hatch test -i py=${{ matrix.python-version }} -i rf=${{ matrix.robot-version }} -- -m "not wip"
 
       - name: Run Robot Framework Tests
-        run: hatch run +py=${{ matrix.python-version }} robot:test -e wip -- --outputdir test-results/os-${{ matrix.os }}-py-${{ matrix.python-version }}-rf-${{ matrix.robot-version }}
+        run: hatch run +py=${{ matrix.python-version }} +rf=${{ matrix.robot-version }} robot:test -e wip -- --outputdir test-results/os-${{ matrix.os }}-py-${{ matrix.python-version }}-rf-${{ matrix.robot-version }}
 
       - name: Upload Test Results
         if: always()
