--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,16 +81,6 @@ dependencies = [
   "pre-commit",
 ]
 
-[tool.hatch.envs.test]
-python = "3.10"
-
-[[tool.hatch.envs.test.matrix]]
-python = ["3.10", "3.11", "3.12", "3.13"]
-robotframework = ["6.0", "6.1", "7.0", "7.1", "7.2"]
-
-# features = ["all"]
-# pre-install-commands = ["install-packages"]
-
 [tool.hatch.envs.default.scripts]
 # pre-commit checks
 pre-commit-check = "pre-commit run --all-files"
@@ -133,53 +123,57 @@ update-changelog = ["python scripts/update_changelog.py"]
 update-git-versions = ["python scripts/update_git_versions.py"]
 bump = ["cz bump"]
 
+[tool.hatch.envs.hatch-test]
+matrix-name-format = "{variable}{value}"
+
 [[tool.hatch.envs.hatch-test.matrix]]
 python = ["3.10", "3.11", "3.12", "3.13"]
-rf = ["rf60", "rf61", "rf70", "rf71", "rf72"]
+rf = ["6.0", "6.1", "7.0", "7.1", "7.2"]
 
 [tool.hatch.envs.hatch-test.overrides]
 matrix.rf.dependencies = [
   { value = "robotframework>6.0.0, <6.1", if = [
-    "rf60",
+    "6.0",
   ] },
   { value = "robotframework>=6.1, <7.0", if = [
-    "rf61",
+    "6.1",
   ] },
   { value = "robotframework>=7.0, <7.1", if = [
-    "rf70",
+    "7.0",
   ] },
   { value = "robotframework>=7.1, <7.2", if = [
-    "rf71",
+    "7.1",
   ] },
   { value = "robotframework>=7.2, <7.3", if = [
-    "rf72",
+    "7.2",
   ] },
 ]
 
 [tool.hatch.envs.robot]
+matrix-name-format = "{variable}{value}"
 python = "3.10"
 extra-dependencies = ["robotcode[runner]"]
 
 [[tool.hatch.envs.robot.matrix]]
 python = ["3.10", "3.11", "3.12", "3.13"]
-rf = ["rf60", "rf61", "rf70", "rf71", "rf72"]
+rf = ["6.0", "6.1", "7.0", "7.1", "7.2"]
 
 [tool.hatch.envs.robot.overrides]
 matrix.rf.dependencies = [
   { value = "robotframework>6.0.0, <6.1", if = [
-    "rf60",
+    "6.0",
   ] },
   { value = "robotframework>=6.1, <7.0", if = [
-    "rf61",
+    "6.1",
   ] },
   { value = "robotframework>=7.0, <7.1", if = [
-    "rf70",
+    "7.0",
   ] },
   { value = "robotframework>=7.1, <7.2", if = [
-    "rf71",
+    "7.1",
   ] },
   { value = "robotframework>=7.2, <7.3", if = [
-    "rf72",
+    "7.2",
   ] },
 ]
 
@@ -198,27 +192,28 @@ lint-fix = "ruff check --fix {args:.}"
 
 [tool.hatch.envs.devel]
 python = "3.10"
+matrix-name-format = "{variable}{value}"
 
 [[tool.hatch.envs.devel.matrix]]
 python = ["3.10", "3.11", "3.12", "3.13"]
-rf = ["rf60", "rf61", "rf70", "rf71", "rf72"]
+rf = ["6.0", "6.1", "7.0", "7.1", "7.2"]
 
 [tool.hatch.envs.devel.overrides]
 matrix.rf.dependencies = [
   { value = "robotframework>6.0.0, <6.1", if = [
-    "rf60",
+    "6.0",
   ] },
   { value = "robotframework>=6.1, <7.0", if = [
-    "rf61",
+    "6.1",
   ] },
   { value = "robotframework>=7.0, <7.1", if = [
-    "rf70",
+    "7.0",
   ] },
   { value = "robotframework>=7.1, <7.2", if = [
-    "rf71",
+    "7.1",
   ] },
   { value = "robotframework>=7.2, <7.3", if = [
-    "rf72",
+    "7.2",
   ] },
 ]
 
