chore: refactor package references to remove version numbers and add central package management and introduce artifacts output layout

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,4 @@
 <Project>
-  <!-- See https://aka.ms/dotnet/msbuild/customize for more details on customizing your build -->
   <PropertyGroup>
     <Version>0.7.0</Version>
     <Authors>Daniel Biehl &lt;daniel.biehl@imbus.de&gt;</Authors>
@@ -9,5 +8,11 @@
     <Copyright>2024 Daniel Biehl &lt;daniel.biehl@imbus.de&gt;</Copyright>
 
     <ArtifactsPath>$(MSBuildThisFileDirectory)artifacts</ArtifactsPath>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <IsLinux>$([System.OperatingSystem]::IsLinux().toString())</IsLinux>
+    <IsWindows>$([System.OperatingSystem]::IsWindows().toString())</IsWindows>
+    <IsMacOS>$([System.OperatingSystem]::IsMacOS().toString())</IsMacOS>
   </PropertyGroup>
 </Project>
