--- a/src/PlatynUI.Server/PlatynUI.Server.csproj
+++ b/src/PlatynUI.Server/PlatynUI.Server.csproj
@@ -5,8 +5,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="StreamJsonRpc" Version="2.21.69" />
-    <PackageReference Include="System.CommandLine.NamingConventionBinder" Version="2.0.0-beta4.22272.1" />
+    <PackageReference Include="StreamJsonRpc" />
+    <PackageReference Include="System.CommandLine.NamingConventionBinder" />
   </ItemGroup>
 
   <PropertyGroup>
