--- a/src/PlatynUI.Extension.Provider.Client/PlatynUI.Extension.Provider.Client.csproj
+++ b/src/PlatynUI.Extension.Provider.Client/PlatynUI.Extension.Provider.Client.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="StreamJsonRpc" Version="2.21.69" />
+    <PackageReference Include="StreamJsonRpc" />
   </ItemGroup>
 
   <ItemGroup>
