--- a/src/PlatynUI.Provider.Avalonia/PlatynUI.Provider.Avalonia.csproj
+++ b/src/PlatynUI.Provider.Avalonia/PlatynUI.Provider.Avalonia.csproj
@@ -5,7 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.Desktop" Version="11.2.5">
+    <PackageReference Include="Avalonia.Desktop">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
