--- a/src/PlatynUI.Provider.Server/PlatynUI.Provider.Server.csproj
+++ b/src/PlatynUI.Provider.Server/PlatynUI.Provider.Server.csproj
@@ -5,7 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="StreamJsonRpc" Version="2.21.69" />
+    <PackageReference Include="StreamJsonRpc" />
   </ItemGroup>
 
   <PropertyGroup>
