--- a/src/PlatynUI.Extension.Provider.Client/PlatynUI.Extension.Provider.Client.csproj
+++ b/src/PlatynUI.Extension.Provider.Client/PlatynUI.Extension.Provider.Client.csproj
@@ -1,9 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Description>PlatynUI Extension for Generic JSONRPC2 Provider Client</Description>
   </PropertyGroup>
 
   <ItemGroup>
