--- a/src/PlatynUI.Platform.MacOS/PlatynUI.Platform.MacOS.csproj
+++ b/src/PlatynUI.Platform.MacOS/PlatynUI.Platform.MacOS.csproj
@@ -1,11 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
     <Description>PlatynUI Platform MacOS</Description>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <LangVersion>latest</LangVersion>
+    <RuntimeIdentifiers>osx-arm64</RuntimeIdentifiers>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RootNamespace>PlatynUI.Platform.MacOS</RootNamespace>
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
