--- a/src/PlatynUI.Platform.X11/PlatynUI.Platform.X11.csproj
+++ b/src/PlatynUI.Platform.X11/PlatynUI.Platform.X11.csproj
@@ -1,9 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Descriptions>PlatynUI Platform X11</Descriptions>
+    <RuntimeIdentifiers>linux-x64;linux-arm</RuntimeIdentifiers>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
