--- a/src/PlatynUI.Provider.Server/PlatynUI.Provider.Server.csproj
+++ b/src/PlatynUI.Provider.Server/PlatynUI.Provider.Server.csproj
@@ -1,4 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <Description>PlatynUI Provider JSONRPC2 Server</Description>
+  </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PlatynUI.Provider.Core\PlatynUI.Provider.Core.csproj" />
@@ -7,11 +10,5 @@
   <ItemGroup>
     <PackageReference Include="StreamJsonRpc" />
   </ItemGroup>
-
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
 
 </Project>
