--- a/src/PlatynUI.Extension.Linux.AtSpi2/PlatynUI.Extension.Linux.AtSpi2.csproj
+++ b/src/PlatynUI.Extension.Linux.AtSpi2/PlatynUI.Extension.Linux.AtSpi2.csproj
@@ -1,9 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Description>PlatynUI Linux Accessibility AT-SPI2 Extension</Description>
   </PropertyGroup>
 
   <ItemGroup>
