--- a/src/PlatynUI.Provider.Avalonia/PlatynUI.Provider.Avalonia.csproj
+++ b/src/PlatynUI.Provider.Avalonia/PlatynUI.Provider.Avalonia.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <Description>PlatynUI Provider Avalonia</Description>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\PlatynUI.Provider.Server\PlatynUI.Provider.Server.csproj" />
   </ItemGroup>
@@ -10,10 +14,5 @@
     </PackageReference>
   </ItemGroup>
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
 
 </Project>
