--- a/src/PlatynUI.Spy/PlatynUI.Spy.csproj
+++ b/src/PlatynUI.Spy/PlatynUI.Spy.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
     <RuntimeIdentifiers>win-x64;win-arm64;linux-x64;linux-arm;osx-arm64</RuntimeIdentifiers>
-    <Nullable>enable</Nullable>
+
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
     <UseAppHost>true</UseAppHost>
+    <NeedsPlatynUIExtensions>true</NeedsPlatynUIExtensions>
   </PropertyGroup>
 
   <!-- macOS -->
@@ -54,29 +54,4 @@
   <ItemGroup>
     <ProjectReference Include="..\PlatynUI.Runtime\PlatynUI.Runtime.csproj" />
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference
-      Include="..\PlatynUI.Extension.Provider.Client\PlatynUI.Extension.Provider.Client.csproj" />
-  </ItemGroup>
-
-  <ItemGroup
-    Condition="'$(IsWindows)' == 'True' Or '$(RuntimeIdentifier)' == 'win-x64' Or '$(RuntimeIdentifier)' == 'win-arm64'">
-    <ProjectReference Include="..\PlatynUI.Platform.Win32\PlatynUI.Platform.Win32.csproj" />
-    <ProjectReference
-      Include="..\PlatynUI.Extension.Win32.UiAutomation\PlatynUI.Extension.Win32.UiAutomation.csproj" />
-  </ItemGroup>
-
-  <ItemGroup
-    Condition="'$(IsLinux)' == 'True' Or '$(RuntimeIdentifier)' == 'linux-x64' Or '$(RuntimeIdentifier)' == 'linux-musl-x64' Or '$(RuntimeIdentifier)' == 'linux-arm64' Or '$(RuntimeIdentifier)' == 'linux-musl-arm64'">
-    <ProjectReference Include="..\PlatynUI.Platform.X11\PlatynUI.Platform.X11.csproj" />
-    <ProjectReference
-      Include="..\PlatynUI.Extension.Linux.AtSpi2\PlatynUI.Extension.Linux.AtSpi2.csproj" />
-  </ItemGroup>
-
-  <ItemGroup
-    Condition="'$(IsMacOS)' == 'True' Or '$(RuntimeIdentifier)' == 'osx-arm64' Or '$(RuntimeIdentifier)' == 'osx-x64'">
-    <ProjectReference Include="..\PlatynUI.Platform.MacOS\PlatynUI.Platform.MacOS.csproj" />
-  </ItemGroup>
-
 </Project>
