--- a/src/Playground/Playground.csproj
+++ b/src/Playground/Playground.csproj
@@ -1,23 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <ItemGroup>
-    <ProjectReference Include="..\PlatynUI.Platform.X11\PlatynUI.Platform.X11.csproj" />
-    <ProjectReference Include="..\PlatynUI.Provider.Core\PlatynUI.Provider.Core.csproj" />
-    <ProjectReference Include="..\PlatynUI.Extension.Linux.AtSpi2\PlatynUI.Extension.Linux.AtSpi2.csproj" />
-    <ProjectReference Include="..\PlatynUI.Extension.Provider.Client\PlatynUI.Extension.Provider.Client.csproj" />
-    <ProjectReference Include="../PlatynUI.Platform.MacOS/PlatynUI.Platform.MacOS.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <!-- <PackageReference Include="Terminal.Gui" Version="1.18.0" /> -->
-  </ItemGroup>
-
   <PropertyGroup>
+    <Description>PlatynUI Playground</Description>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <NeedsPlatynUIExtensions>true</NeedsPlatynUIExtensions>
   </PropertyGroup>
-
 </Project>
