--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,8 +57,8 @@ sources = ["src"]
 exclude = ["src/PlatynUI/technology/uiautomation/runtime"]
 
 # this needs to be enabled only for hatch build
-# [tool.hatch.build.targets.wheel.hooks.custom]
-# path = "scripts/dotnet_build_hook.py"
+[tool.hatch.build.targets.wheel.hooks.custom]
+path = "scripts/dotnet_build_hook.py"
 
 [tool.hatch.envs.default]
 installer = "uv"
@@ -123,8 +123,11 @@ update-changelog = ["python scripts/update_changelog.py"]
 update-git-versions = ["python scripts/update_git_versions.py"]
 bump = ["cz bump"]
 
+
 [tool.hatch.envs.hatch-test]
 matrix-name-format = "{variable}{value}"
+[tool.hatch.envs.hatch-test.scripts]
+run = "asdasd"
 
 [[tool.hatch.envs.hatch-test.matrix]]
 python = ["3.10", "3.11", "3.12", "3.13"]
@@ -449,13 +452,13 @@ skip = ["pp*"]
 archs = "auto"
 
 [tool.cibuildwheel.macos]
-archs = ["x86_64", "arm64"]
-
-[tool.cibuildwheel.linux]
-archs = ["x86_64", "aarch64"]
+archs = ["auto"]
 
 [tool.cibuildwheel.windows]
-archs = ["x86_64"]
+archs = ["auto"]
+
+[tool.cibuildwheel.linux]
+archs = ["auto"]
 
 before-all = """\
 if command -v yum 2>&1 > /dev/null
@@ -473,6 +476,8 @@ chmod +x ./dotnet-install.sh
 ./dotnet-install.sh --version latest
 ln -s /root/.dotnet/dotnet /bin/dotnet
 """
+
 [tool.cibuildwheel.environment]
 HATCH_BUILD_HOOKS_ENABLE = "1"
 HATCH_VERBOSE = "1"
+MACOSX_DEPLOYMENT_TARGET="15.0"
