chore: install dotnet core 8 and 9 in linux cibuildwheels

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -473,7 +473,8 @@ fi
 
 wget https://dot.net/v1/dotnet-install.sh -O dotnet-install.sh
 chmod +x ./dotnet-install.sh
-./dotnet-install.sh --version latest
+./dotnet-install.sh --version latest --channel STS
+./dotnet-install.sh --version latest --channel LTS
 ln -s /root/.dotnet/dotnet /bin/dotnet
 """
 
