chore: simplify platform condition checks in Directory.Build.targets

--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -7,28 +7,14 @@
     </ItemGroup>
 
     <ItemGroup
-        Condition="'$(NeedsPlatynUIExtensions)' == 'true' and ('$(IsWindows)' == 'true' Or '$(RuntimeIdentifier)' == 'win-x64' Or '$(RuntimeIdentifier)' == 'win-arm64')">
+        Condition="'$(NeedsPlatynUIExtensions)' == 'true' and $(IncludeWindowsPlatform)' == 'true'">
         <ProjectReference Include="..\PlatynUI.Platform.Win32\PlatynUI.Platform.Win32.csproj" />
         <ProjectReference
             Include="..\PlatynUI.Extension.Win32.UiAutomation\PlatynUI.Extension.Win32.UiAutomation.csproj" />
     </ItemGroup>
 
     <ItemGroup
-        Condition="'$(NeedsPlatynUIExtensions)' == 'true' and ('$(IsWindows)' == 'true' Or '$(RuntimeIdentifier)' == 'win-x64' Or '$(RuntimeIdentifier)' == 'win-arm64')">
-        <ProjectReference Include="..\PlatynUI.Platform.Win32\PlatynUI.Platform.Win32.csproj" />
-        <ProjectReference
-            Include="..\PlatynUI.Extension.Win32.UiAutomation\PlatynUI.Extension.Win32.UiAutomation.csproj" />
-    </ItemGroup>
-
-    <ItemGroup
-        Condition="'$(NeedsPlatynUIExtensions)' == 'true' and ('$(IsWindows)' == 'true' Or '$(RuntimeIdentifier)' == 'win-x64' Or '$(RuntimeIdentifier)' == 'win-arm64')">
-        <ProjectReference Include="..\PlatynUI.Platform.Win32\PlatynUI.Platform.Win32.csproj" />
-        <ProjectReference
-            Include="..\PlatynUI.Extension.Win32.UiAutomation\PlatynUI.Extension.Win32.UiAutomation.csproj" />
-    </ItemGroup>
-
-    <ItemGroup
-        Condition="'$(NeedsPlatynUIExtensions)' == 'true' and ('$(IsLinux)' == 'true' Or '$(RuntimeIdentifier)' == 'linux-x64' Or '$(RuntimeIdentifier)' == 'linux-musl-x64' Or '$(RuntimeIdentifier)' == 'linux-arm64' Or '$(RuntimeIdentifier)' == 'linux-musl-arm64')">
+        Condition="'$(NeedsPlatynUIExtensions)' == 'true' and $(IncludeLinuxPlatform)' == 'true'">
         <ProjectReference Include="..\PlatynUI.Platform.X11\PlatynUI.Platform.X11.csproj" />
         <ProjectReference
             Include="..\PlatynUI.Extension.Linux.AtSpi2\PlatynUI.Extension.Linux.AtSpi2.csproj" />
