chore: fix syntax in platform condition checks in Directory.Build.targets

--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -7,14 +7,14 @@
     </ItemGroup>
 
     <ItemGroup
-        Condition="'$(NeedsPlatynUIExtensions)' == 'true' and $(IncludeWindowsPlatform)' == 'true'">
+        Condition="'$(NeedsPlatynUIExtensions)' == 'true' and '$(IncludeWindowsPlatform)' == 'true'">
         <ProjectReference Include="..\PlatynUI.Platform.Win32\PlatynUI.Platform.Win32.csproj" />
         <ProjectReference
             Include="..\PlatynUI.Extension.Win32.UiAutomation\PlatynUI.Extension.Win32.UiAutomation.csproj" />
     </ItemGroup>
 
     <ItemGroup
-        Condition="'$(NeedsPlatynUIExtensions)' == 'true' and $(IncludeLinuxPlatform)' == 'true'">
+        Condition="'$(NeedsPlatynUIExtensions)' == 'true' and '$(IncludeLinuxPlatform)' == 'true'">
         <ProjectReference Include="..\PlatynUI.Platform.X11\PlatynUI.Platform.X11.csproj" />
         <ProjectReference
             Include="..\PlatynUI.Extension.Linux.AtSpi2\PlatynUI.Extension.Linux.AtSpi2.csproj" />
